big cleanup, added submodules microsupport and jdksavdecc-c and added CMakeLists.txt. Did clang-format. Updated Doxyfile

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "microsupport"]
 	path = microsupport
 	url = ../microsupport.git
+[submodule "jdksavdecc-c"]
+	path = jdksavdecc-c
+	url = ../jdksavdecc-c.git
