--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 
 install:
   # g++4.9
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.9; fi
+  - if [ "$CXX" = "g++" ]; then sudo apt-get update && sudo apt-get install -qq g++-4.9 gcc-4.9 cpp-4.9; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9"; fi
 
 before_script:
