--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ compiler:
 before_install:
   # g++4.9
   - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libpcap-dev
 
 install:
   # g++4.9
@@ -28,5 +30,4 @@ notifications:
 
 os:
   - linux
-  - osx
 
