default LIBUV ON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ set(PROJECT jdksavdecc-proxy)
 project(${PROJECT} C CXX)
 
 set(CXX11 "OFF")
+set(LIBUV "ON")
 
 option(JDKSAVDECC_PROXY_STANDALONE "JDKSAVDECC Proxy Standalone Build" "ON")
 
