more biicode config

--- a/biicode.conf
+++ b/biicode.conf
@@ -1,7 +1,8 @@
 # Biicode configuration file
 
 [requirements]
-    statusbar/jdksavdecc-mcu: 0
+	 statusbar/jdksavdecc-mcu: 0
+         statusbar/uvrawpkt: 2
 
 [parent]
 
@@ -29,6 +30,7 @@
 [includes]
     JDKSAvdeccMCU/World.hpp: statusbar/jdksavdecc-mcu/include
     JDKSAvdeccMCU.hpp: statusbar/jdksavdecc-mcu/include
+    uv-rawpkt.h: statusbar/uvrawpkt/include
 
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
