Add Obbligato to biicode

--- a/biicode.conf
+++ b/biicode.conf
@@ -3,6 +3,7 @@
 [requirements]
 	 statusbar/jdksavdecc-mcu: 0
          statusbar/uvrawpkt: 2
+         statusbar/Obbligato: 0
 
 [parent]
 
@@ -31,6 +32,7 @@
     JDKSAvdeccMCU/World.hpp: statusbar/jdksavdecc-mcu/include
     JDKSAvdeccMCU.hpp: statusbar/jdksavdecc-mcu/include
     uv-rawpkt.h: statusbar/uvrawpkt/include
+    Obbligato.hpp: statusbar/Obbligato/include
 
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
